# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "lanwatch"
description = "Scans your network at certain intervals for devices and provides a web based GUI to manage them"
readme = "README.md"
dynamic = ["version"]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
license-files = ["LICEN[CS]E*"]
keywords = ["arp", "scan", "arp-scan", "monitor", "watch", "alert"]
requires-python = ">= 3.8"
dependencies = [
    "requests",
    "nicegui>=2.0.0",
    yaml
]
authors = [
  {name = "Ingo Ratsdorf", email = "ingo@envirology.co.nz"}
]
maintainers = [
  {name = "Ingo Ratsdorf", email = "ingo@envirology.co.nz"}
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "lanwatch/_version.py"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["lanwatch*"]  # ["*"] by default
exclude = ["lanwatch.tests*"]  # empty by default
namespaces = false  # true by default
